<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:orientation="vertical"
  tools:context=".feature.Fragment.QFamilyMemberFragment">
  <LinearLayout
    android:id="@+id/lin"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp"
    android:orientation="vertical">

    <TextView
      android:id="@+id/textview_q_title_num_of_fam"
      style="?android:textAppearanceMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:layout_gravity="center_horizontal"
      android:text="@string/q_interviewed_name"
      android:layout_marginBottom="20dp"
      android:padding="10dp"
      android:textColor="#333"
      android:textSize="20sp" />

    <EditText
      android:id="@+id/editText_answer"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginLeft="16dp"
      android:inputType="number"
      android:gravity="center_horizontal"
      android:textSize="18sp"
      android:layout_marginRight="16dp" >
      <requestFocus/>
    </EditText>
    <TextView
      android:id="@+id/textview_q_title"
      style="?android:textAppearanceMedium"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textStyle="bold"
      android:layout_gravity="center_horizontal"
      android:text="@string/q_interviewed_name"
      android:layout_marginBottom="20dp"
      android:padding="10dp"
      android:textColor="#333"
      android:textSize="18sp" />
  </LinearLayout>


<android.support.v7.widget.RecyclerView
  android:id="@+id/my_list"
  android:layout_width="match_parent"
  android:layout_below="@+id/lin"
  android:layout_above="@+id/btn_add"
  android:layout_marginBottom="6dp"
  app:layoutManager="android.support.v7.widget.LinearLayoutManager"
  android:layout_height="wrap_content">
</android.support.v7.widget.RecyclerView>
  <Button
    android:id="@+id/btn_add"
    android:layout_width="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@drawable/round_edge_frag_btn"
    android:text="@string/add"
    android:padding="10dp"
    android:textColor="#FFF"
    android:textAllCaps="false"
    android:layout_marginBottom="40dp"
    android:layout_centerInParent="true"
    android:layout_height="60dp"/>

  <Button
    android:id="@+id/button_next"
    android:background="@drawable/round_edge_frag_btn"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_marginRight="10dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentBottom="true"
    android:layout_gravity="center_horizontal"
    android:text="@string/next"
    android:layout_marginBottom="40dp"
    android:textAllCaps="false"
    android:textColor="#FFF"
    android:textSize="16sp"/>

  <Button
    android:id="@+id/button_prev"
    android:layout_width="wrap_content"
    android:layout_height="60dp"
    android:layout_alignParentStart="true"
    android:layout_alignParentBottom="true"
    android:layout_marginLeft="10dp"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/round_edge_frag_btn"
    android:layout_marginBottom="40dp"
    android:text="@string/prev"
    android:textAllCaps="false"
    android:textColor="#FFF"
    android:textSize="16sp"/>

</RelativeLayout>